Working Commit
Got all API endpoints put in for Products, Design and Inventory
